src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-310.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typevb=C\")"
---
items:
  - loc: "#units typevb=C"
    locs:
      directive: "#units"
    options:
      - do_not_average: false
        is_corrected: true
        loc: typevb=C
        locs:
          is_corrected: C
          option: typevb
        option: BacksightInclinationType
        tolerance:
          unit: Degrees
          value: 5
    type: UnitsDirective
