src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-311.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typevb=x\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units typevb=x"
        locs:
          directive: "#units"
        options:
          - INVALID:
              is_corrected:
                INVALID: x
                issues:
                  - 0
              loc: typevb=x
              locs:
                is_corrected: x
                option: typevb
              option: BacksightInclinationType
        type: UnitsDirective
issues:
  - code: EINVALIDBACKSIGHTCORRECTED
    loc: x
    message: Invalid backsight corrected flag
    severity: Error
