src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-312.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typevb=n,\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units typevb=n,"
        locs:
          directive: "#units"
        options:
          - INVALID:
              is_corrected: false
              loc: "typevb=n,"
              locs:
                is_corrected: n
                option: typevb
                tolerance: ""
              option: BacksightInclinationType
              tolerance:
                INVALID: ""
                issues:
                  - 0
        type: UnitsDirective
issues:
  - code: EMISSINGTOLERANCE
    loc: ""
    message: Missing tolerance
    severity: Error
