src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-313.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typevb=,3\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units typevb=,3"
        locs:
          directive: "#units"
        options:
          - INVALID:
              is_corrected:
                INVALID: ""
                issues:
                  - 0
              loc: "typevb=,3"
              locs:
                is_corrected: ""
                option: typevb
                tolerance: "3"
              option: BacksightInclinationType
              tolerance:
                unit: Degrees
                value: 3
        type: UnitsDirective
issues:
  - code: EMISSINGBACKSIGHTCORRECTED
    loc: ""
    message: Missing backsight corrected flag
    severity: Error
