src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-32.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units d=m\")"
---
items:
  - loc: "#units d=m"
    locs:
      directive: "#units"
    options:
      - loc: d=m
        locs:
          option: d
          unit: m
        option: PrimaryDistanceUnit
        unit: Meters
    type: UnitsDirective
