src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-320.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typevb=c,3.,xb\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units typevb=c,3.,xb"
        locs:
          directive: "#units"
        options:
          - INVALID:
              do_not_average:
                INVALID: xb
                issues:
                  - 0
              is_corrected: true
              loc: "typevb=c,3.,xb"
              locs:
                do_not_average: xb
                is_corrected: c
                option: typevb
                tolerance: "3."
              option: BacksightInclinationType
              tolerance:
                unit: Degrees
                value: 3
        type: UnitsDirective
issues:
  - code: EINVALIDDONOTAVERAGE
    loc: xb
    message: Invalid do not average flag
    severity: Error
